metrics query runs
Signed-off-by: Michael Crenshaw <350466+crenshaw-dev@users.noreply.github.com>

--- a/manifests/quick-start/argo-cd/kustomization.yaml
+++ b/manifests/quick-start/argo-cd/kustomization.yaml
@@ -6,6 +6,7 @@ commonLabels:
 resources:
   - https://raw.githubusercontent.com/argoproj/argo-cd/stable/manifests/install.yaml
   - bootstrap.yaml
+  - metricsqueryruns.yaml
   - ../../extension
 
 patchesStrategicMerge:
