--- a/manifests/quick-start/argo-cd/metricsqueryruns.yaml
+++ b/manifests/quick-start/argo-cd/metricsqueryruns.yaml
@@ -10,6 +10,7 @@ spec:
     path: manifests/metricsqueryruns
   destination:
     server: https://kubernetes.default.svc
-    namespace: default
+    namespace: argocd
   syncPolicy:
-    automated: {}
+    automated:
+      prune: true
