add Zach's work
Signed-off-by: Michael Crenshaw <350466+crenshaw-dev@users.noreply.github.com>

--- a/manifests/quick-start/argo-cd/bootstrap.yaml
+++ b/manifests/quick-start/argo-cd/bootstrap.yaml
@@ -11,8 +11,8 @@ spec:
   destination:
     server: https://kubernetes.default.svc
   syncPolicy:
-    automated:
-      selfHeal: true
-      prune: true
+#    automated:
+#      selfHeal: true
+#      prune: true
     syncOptions:
       - ServerSideApply=true
